# light

./: .gitignore  Cargo.toml  README.md
reports/: half-report.tex
src/: main.rs  utils.rs
src/compute/: fan.rs  mod.rs  raytracing.rs
src/query/: curvature.rs  mod.rs  radius.rs  thickness.rs
src/shaders/: fan.wgsl  raytracing.wgsl
src/system/: intersection.rs  mod.rs  object.rs  ray.rs  surface.rs
